--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="angular-rails-example">
 <head>
   <title>AngularRailsExample</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
-<body>
-<%= yield %>
+<body ng-view>
 </body>
 </html>
