--- a/app/assets/javascripts/templates/books/index.html.erb
+++ b/app/assets/javascripts/templates/books/index.html.erb
@@ -1,3 +1,37 @@
 <div class="row">
-  <div class="col-sm-12">Lorem Ipsum</div>
+  <div class="col-sm-12">
+    <header class="page-header">
+      <h2>Books</h2>
+    </header>
+    <table class="table table-condensed">
+      <thead>
+        <tr>
+          <th class="action-col"></th>
+          <th class="isbn-col">ISBN</th>
+          <th class="author-col">Author(s)</th>
+          <th class="title-col">Title</th>
+          <th class="price-col">Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="action-col">
+            <a href class="text-danger"><i class="glyphicon glyphicon-remove"></i></a>
+          </td>
+          <td class="isbn-col">
+            123456789
+          </td>
+          <td class="author-col">
+            John Smith
+          </td>
+          <td class="title-col">
+            Sample Book
+          </td>
+          <td class="price-col">
+            $ 12.00
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
