--- a/app/assets/javascripts/templates/books/index.html.erb
+++ b/app/assets/javascripts/templates/books/index.html.erb
@@ -15,18 +15,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr ng-repeat="book in books">
-          <td class="remove-col">
-            <a href class="text-danger"><i class="glyphicon glyphicon-remove"></i></a>
-          </td>
-          <td class="isbn-col">{{book.isbn}}</td>
-          <td class="author-col">{{book.author}}</td>
-          <td class="title-col">{{book.title}}</td>
-          <td class="price-col">$ {{book.price / 1000 | number : 2}}</td>
-          <td class="action-col">
-            <a ng-href="/{{book.id}}"><i class="glyphicon glyphicon-pencil"></i></a>
-          </td>
-        </tr>
+        <tr book-row book="book" removebook="removeBook(book)" ng-repeat="book in books"></tr>
       </tbody>
     </table>
   </div>
