--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,7 +1,7 @@
 @import 'bootstrap-sprockets'
 @import 'bootstrap'
 
-tr:not(:hover)
+tbody tr:not(:hover)
   .remove-col, .action-col
     a
       color: gray
